CrvsParts: Add notification LED brightness slider
* https://github.com/xiaomi-sdm660/android_device_xiaomi_sdm660-common/commit/df6c75e09bf44636595793ec90de2c256c2ba7a7#diff-8545ebee94df9bbc7581beba0c3fb49a

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,6 +14,10 @@
     <string name="headphone_gain">Headphone gain</string>
     <string name="microphone_gain">Microphone gain</string>
 
+    <!-- Notification LED brightness -->
+    <string name="">Notification LED</string>
+    <string name="notification_led_title">LED brightness</string>
+
     <!-- Torch -->
     <string name="torch_brightness_title">Brightness</string>
 
