--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="microphone_gain">Microphone gain</string>
 
     <!-- Notification LED brightness -->
-    <string name="">Notification LED</string>
+    <string name="notification_title">Notification LED</string>
     <string name="notification_led_title">LED brightness</string>
 
     <!-- Torch -->
@@ -53,6 +53,7 @@
     <string name="grayscale">Grayscale Display</string>
 
     <string name="presets_dialog_title">Select Preset</string>
+
     <!-- Presets -->
     <string name="preset_default">Default</string>
     <string name="preset_version_1">Version 1</string>
