--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,6 +21,10 @@
     <string name="backlight_dimmer">Backlight Dimmer</string>
     <string name="backlight_summary">Dim the display to the maximum value</string>
 
+    <!-- FPS Info -->
+    <string name="fps_info_title">FPS Info</string>
+    <string name="fps_info_summary">Show FPS info</string>
+
     <!-- Vibrator -->
     <string name="vibration_strength_title">Strength</string>
 
